--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6181,10 +6181,10 @@ ul.list-products {
 }
 /*cleric-tabs*/
 .cleric-tabs.default.rows-space-40 {
-  padding-top: 9px;
+  padding-top: 35px;
 }
 .cleric-tabs .tab-head {
-  margin-bottom: 55px;
+  margin-bottom: 40px;
 }
 .cleric-tabs .tab-link {
   padding: 0;
@@ -8801,13 +8801,18 @@ body.vertical-menu-open .vertical-menu-overlay {
 }
 
 .banner-wrapp .banner {
-  min-height: 285px;
+  height: 285px;
 }
 .item-banner.style7 .description {
   margin-bottom: 15px;
   max-width: 185px;
 }
-
+.banner-wrapp .banner .item-banner {
+  height: 100%;
+}
+.row-banner .banner .item-banner .inner {
+  height: 100%;
+}
 .item-banner.style8 .description {
   margin-bottom: 13px;
   max-width: 185px;
@@ -11505,7 +11510,7 @@ a:active,
   z-index: 1;
   border-radius: 50%;
   font-size: 18px;
-  top: 40%;
+  top: 47%;
 }
 .slider-prev-arrow {
   left: 4px;
@@ -11556,7 +11561,7 @@ a:active,
   width: 100%;
   padding: 1em 0;
   color: #666;
-  font-size: 15px;
+  font-size: 16px;
   font-weight: 400;
   border: none;
   background: none;
@@ -11628,7 +11633,7 @@ a:active,
 .accordion .accordion-content p {
   font-size: 15px;
   font-weight: 300;
-  margin: 1.5em 0;
+  margin: 1em 0;
 }
 
 @media screen and (max-width: 992px) {
@@ -11636,3 +11641,30 @@ a:active,
     display: none;
   }
 }
+
+.banner-header .img_part {
+  padding-left: 0;
+}
+
+table {
+  margin-top: 20px;
+  display: block;
+  max-width: fit-content;
+  overflow-x: auto;
+  white-space: nowrap;
+}
+.cleric-product,
+.cleric-blog,
+.product-grid {
+  position: relative;
+}
+.cleric-product .slider-prev-arrow {
+  left: 70px;
+}
+.cleric-product .slider-next-arrow {
+  right: 70px;
+}
+.cleric-blog .slider-arrow {
+  top: 26%;
+}
+
